--- a/spritegame.css
+++ b/spritegame.css
@@ -13,11 +13,11 @@
     opacity: 1;
   }
 
-  60% {
+  65% {
     opacity: 1;
   }
 
-  100% {
+  90% {
     opacity: 0;
   }
 }
@@ -34,6 +34,9 @@
 
 html,
 body {
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   padding: 0;
   font-family: main;
@@ -45,6 +48,33 @@ body {
 h1 {
   text-align: center;
   margin-top: 0%;
+}
+
+table {
+  width: 60%;
+  text-align: center;
+}
+
+td {
+  margin: 0%;
+  width: 50%;
+  background-color: darkslategrey;
+  border-color: #111;
+  border-width: 3px;
+  border-style: solid;
+  border-collapse: collapse;
+}
+
+#back_button {
+  position: relative;
+  margin-top: 2%;
+  transform: scale(100%);
+  transition: transform 0.2s ease-out;
+}
+
+#back_button:hover {
+  cursor: pointer;
+  transform: scale(120%);
 }
 
 .flex-center {
@@ -89,19 +119,31 @@ h1 {
 
 /* dashboard outputs */
 #dashboard {
-  display: grid;
-  grid-template-columns: 25% 75%;
+  width: 100%;
+  height: 100%;
+  display: flex;
   justify-content: center;
-  width: 70%;
+  align-items: center;
+  width: 100%;
   margin: 0 auto;
   padding: 1em 0;
 }
 
+#name {
+  color: white;
+  background-color: #000;
+  border-color: white;
+  border-style: solid;
+}
+
 #startButton {
   color: #fff;
+  width: 10%;
+  font-size: small;
+  height: 4%;
   background-color: #222;
   border: 3px solid rgb(0, 0, 0);
-  padding: 0.5em;
+  
   text-align: center;
 }
 
@@ -141,6 +183,12 @@ h1 {
 .item img {
   width: 100%;
   height: 100%;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #projectile {
